--- a/whac-a-mole_game/mole.css
+++ b/whac-a-mole_game/mole.css
@@ -1,23 +1,26 @@
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: climate Crisis, Arial;
   text-align: center;
-  background: url("images/mario-bg.jpg");
+  background: url("./mario-bg.jpg");
   background-size: cover;
-}
-.header  {
-  font-family: climate Crisis;
-  text-shadow: 0.1rem 0.2rem 0.1rem rgba(0, 0, 0, 0.8);
-  color: rgba(255, 255, 255, 0.8);
 }
 #board {
   width: 540px;
   height: 540px;
-  background: url("images/soil.png");
-    background-size: cover;
-    border: 5px solid rgba(31, 18, 6, 0.781);
-    border-radius: 30px;
-    box-shadow: 0.3rem 0.4rem 0.8rem rgba(0, 0, 0, 0.8);
   margin: 0 auto;
   display: flex;
-  flex-wrap: wrap; 
+  flex-wrap: wrap;
+  background: url("./soil.png");
+  border: 4px solid rgba(46, 25, 13, 0.8);
+  border-radius: 15px;
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-drag: none;
+  -webkit-user-select: none;
+}
+#board div {
+  width: 180px;
+  height: 180px;
+  background-image: url("./pipe.png");
+  background-size: cover;
 }
