--- a/whac-a-mole_game/mole.css
+++ b/whac-a-mole_game/mole.css
@@ -16,7 +16,7 @@ body {
 
     background: url("./soil.png");
     background-size: cover;
-    border: 3px solid white;
+    border: 3px solid rgb(22, 15, 3);
     border-radius: 25px;
 }
 #board div {
@@ -30,4 +30,9 @@ body {
 #board div img {
     width: 180px;
     height: 100px;
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-drag: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
 }
